Fixing truncation of theme text

--- a/assets/css/app/home.scss
+++ b/assets/css/app/home.scss
@@ -240,7 +240,7 @@
       .header_background_image {
         filter: brightness(1);
       }
-      height: 300px;
+      height: 400px;
       &:after {
         position: absolute;
         content: "";
